# enginesql

./: .gitattributes  .gitignore  CMakeLists.txt
assets/shaders/: basicshader.glsl
db/: scene1.db  scene1.db-journal  scene1.sqbpro
exe/: CMakeLists.txt  main.cpp
lib/SQLite3/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
src/: CMakeLists.txt  EditorGUI.cpp  EditorGUI.h  GameObject.h  Globals.h  RendereringSystem.cpp  RendereringSystem.h  main.cpp  platform.cpp  platform.h  renderer.cpp  renderer.h  scene.cpp  scene.h
src/components/: renderer.h
src/exe/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test1.cpp
